--- a/background.html
+++ b/background.html
@@ -18,6 +18,8 @@
             
         </div>
     </header>
+    <button id="back-to-top">Back to Top</button>
+<footer class="footer"><p>&copy; 2024 ByteWave. All rights reserved.</p></footer>
 </body>
 </html>
 
