--- a/dropdown.html
+++ b/dropdown.html
@@ -50,5 +50,7 @@
     <!-- Link to your JavaScript file -->
     <script src="data.js"></script>
     <script src="script.js"></script>
+    <button id="back-to-top">Back to Top</button>
+<footer class="footer"><p>&copy; 2024 ByteWave. All rights reserved.</p></footer>
 </body>
 </html>
