last change before rehearsal

--- a/Exconsole.html
+++ b/Exconsole.html
@@ -64,7 +64,7 @@
         </div>
         <br>
         <div class="OrderClass">
-            <h2>Order Number</h2>
+            <h2>Order Number:</h2>
             <div id="Onum"><h2>Nothing for now</h2></div>
         </div>
         <br>
@@ -75,14 +75,14 @@
         <div id="OrderLight"></div>
     </div>
 </div>
-    <br><br><br><br><br>
 
     <!-- PARTNER -->
     <div class="Partnerside">
         <h2>Partner Console</h2>
+        <br>
         <div>
             <h2>Order Number: </h2>
-            <div id="Onum2"><h2>Nothing for now</h2></div>
+            <div id="Onum2"><h2></h2></div>
             
         </div>
         <br>
@@ -96,6 +96,7 @@
 
         <div id="Partnerbtn"> 
             <input type="submit" value="Finish Order">
+            <audio id="bellsfx" src="bell.mp3" preload="auto"></audio>
         </div>
     </div>
     <button id="back-to-top">Back to Top</button>
