--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                         <div class="contact-card">
                             <img src="images/tife-headshot-img.jpg" class="profile-img" alt="Tife Odepe">
                             <p>Tife Odepe</p>
-                            <a class="contact-text" href="" target="_blank">Linkedin</a>
+                            <a class="contact-text" href="https://www.linkedin.com/in/tife-odepe-636434292/" target="_blank">Linkedin</a>
                             <br>
                             <a class="contact-text" href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=tifeodepe@gmail.com" target="_blank">Email</a>
                             <br> 
