--- a/Exconsole.html
+++ b/Exconsole.html
@@ -36,7 +36,7 @@
                                     <span>></span>               
                                     </a>
                                 <a href="Exconsole.html" class="about-menu-link">
-                                    <p>An Example</p> 
+                                    <p>Place an Order</p> 
                                     <span>></span>               
                                 </a>
                             </div>
