--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
                                             <p>Mission</p> 
                                             <span>></span>               
                                             </a>
-                                        <a href="faq.html" class="about-menu-link">
-                                            <p>FAQ</p> 
+                                        <a href="Exconsole.html" class="about-menu-link">
+                                            <p>Place an Order</p> 
                                             <span>></span>               
                                         </a>
                                     </div>
