--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <span>></span>               
                                     </a>
                                 <a href="Exconsole.html" class="about-menu-link">
-                                    <p>FAQ</p> 
+                                    <p>Place an Order</p> 
                                     <span>></span>               
                                 </a>
                             </div>
