--- a/mission.html
+++ b/mission.html
@@ -38,8 +38,8 @@
                                     <p>Visions and Goals</p> 
                                     <span>></span>               
                                     </a>
-                                <a href="faq.html" class="about-menu-link">
-                                    <p>FAQ</p> 
+                                <a href="Exconsole.html" class="about-menu-link">
+                                    <p>Place an Order</p> 
                                     <span>></span>               
                                 </a>
                             </div>
