--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li><a href="filter.html">Search Restaurants</a>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="login.html" class="login">Log In</a></li>
-                    <li><a href="signin.html">Sign In</a></li>
+                    <li><a href="signin.html">Sign Up</a></li>
                    </ul>
                 </nav>
         </header>
